2006-11-16  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Added freeIndexSetId GROUP BY in tx_indexedsearch->execFinalQuery() to make SELECT work on DBs other than Mysql

2006-11-13  Bernhard Kraft  <kraftb@kraftb.at>

	* Fixed a bug: Normal labels rendered by class.db_list_extra.inc didn't get passed through t3lib_BEfunc::getProcessedValueExtra when alt_label fields are set.

2006-11-08  Dmitry Dulepov  <dmitry@typo3.org>

	* Enable creation of compact flexforms

2006-11-07  Michael Stucki  <michael@typo3.org>

	* Fixed bug #4348: Wrong time format in syslog output

2006-11-06  Michael Stucki  <michael@typo3.org>

	* Fix bug #3495: Endless recursion with some MySQL versions

2006-11-03  Michael Stucki  <michael@typo3.org>

	* Fixed bug #4425: Garble code in adodb extension
	* Fixed Cross Site Scripting issue in fe_adminLib.inc. For details, see http://typo3.org/teams/security/security-bulletins/typo3-20061010-1/ - thanks to Andriu Isenring Ritsch for discovering and reporting this issue.

2006-11-02 Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug with bidirectional mm-relations: "group" fields with more than one table allowed didn't work properly any more

2006-11-02  Michael Stucki  <michael@typo3.org>

	* Fixed bug #1655: t3lib_div::substUrlsInPlainText() did not support HTTPS links
	* Fixed bug #1236 again: 404 error while using the new content wizard
	* Fixed bug #4443: Items in CE "Insert Records" don't have edit options in context menu any longer
	* Small EM change: Annotate if all or only reviewed extensions should be searched

2006-10-30  Karsten Dambekalns	<karsten@typo3.org>

	* Add security hints in typo3/mod/tools/em/class.em_index.php
	* Fixed bug #3637 in EM (translation handling)

2006-10-29  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #4021: array_merge error with PHP 5.0
	* Changed occurences of PATH_site.'typo3conf/' to PATH_typo3conf and PATH_site.TYPO3_mainDir to PATH_typo3
